--- a/src/EncurtadorURL/core/templates/core/login.html
+++ b/src/EncurtadorURL/core/templates/core/login.html
@@ -1,22 +1,34 @@
-<!-- templates/login.html -->
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}?v=2">
 </head>
 <body>
-    <h2>Login</h2>
-    {% if error %}
-        <p style="color:red;">{{ error }}</p>
-    {% endif %}
-    <form method="post">
-        {% csrf_token %}
-        <label>Username:</label><br>
-        <input type="text" name="username"><br><br>
-        <label>Password:</label><br>
-        <input type="password" name="password"><br><br>
-        <button type="submit">Login</button>
-    </form>
+    <div class="login-container">
+        <h2 class="title">Login</h2>
+
+        {% if error %}
+            <p class="error">{{ error }}</p>
+        {% endif %}
+
+        <form method="post" class="form-container">
+            {% csrf_token %}
+            
+            <div class="input-group">
+                <label for="username">Usuário:</label>
+                <input id="username" type="text" name="username" placeholder="Digite seu usuário">
+            </div>
+
+            <div class="input-group">
+                <label for="password">Senha:</label>
+                <input id="password" type="password" name="password" placeholder="Digite sua senha">
+            </div>
+
+            <button type="submit">Entrar</button>
+        </form>
+    </div>
 </body>
 </html>
